--- a/set-monad.cabal
+++ b/set-monad.cabal
@@ -1,5 +1,5 @@
 name:               set-monad
-version:            0.2.0.0
+version:            0.3.0.0
 synopsis:           Set monad
 description:
   The @set-monad@ library exports the @Set@ abstract data type and
@@ -88,5 +88,5 @@ source-repository head
 
 library
   exposed-modules:  Data.Set.Monad
-  build-depends:    base >=4 && <5, deepseq, containers
+  build-depends:    base >=4.9, deepseq, containers
   ghc-options:      -O3 -Wall
