--- a/set-monad.cabal
+++ b/set-monad.cabal
@@ -88,5 +88,5 @@ source-repository head
 
 library
   exposed-modules:  Data.Set.Monad
-  build-depends:    base >=4.9, deepseq, containers
+  build-depends:    base >=4.9 && < 5, deepseq, containers
   ghc-options:      -O3 -Wall
